terraform/modules/app/main.tf
resource "aws_launch_template" "app" {
  name_prefix   = "app"
  image_id      = data.aws_ami.ubuntu.image_id
  instance_type = "t3.nano"

  vpc_security_group_ids = [aws_security_group.allow_http.id]

  block_device_mappings {
    device_name = "/dev/sda1"

    ebs {
      volume_size = 20
    }
  }

  key_name = "ubuntu"

  user_data = base64encode(templatefile("${path.module}/user-data.shtpl", { Environment = var.vars.environment }))

}

resource "aws_autoscaling_group" "app" {
  name               = "${var.vars.environment}-asg"
  availability_zones = ["us-east-1a"]
  desired_capacity   = 1
  max_size           = 1
  min_size           = 1

  target_group_arns = [var.vars.tgapp.arn]

  launch_template {
    id      = aws_launch_template.app.id
    version = "$Latest"
  }
}

data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"]

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-*"]
  }

  filter {
    name   = "root-device-type"
    values = ["ebs"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

resource "aws_security_group" "allow_http" {
  name        = "allow_app_http"
  description = "Allow HTTP inbound traffic"
  vpc_id      = var.vars.values.vpc.vpc_id

  ingress {
    description      = "HTTP from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "SSH from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_http"
  }
}
